--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-flask==2.0.1
-flask-socketio==5.1.1
-pymongo==3.12.0
-werkzeug==2.0.1
-python-dotenv==0.19.0
+Flask==2.3.3
+Flask-SocketIO==5.3.5
+Flask-SQLAlchemy==3.0.6
+Werkzeug==3.0.1
+python-engineio==4.5.1
+python-socketio==5.8.0
